--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -53,8 +53,6 @@ hr{
     color: #ffffff;
     font-size: 16px;
     font-weight: 400;
-    transition-property: width;
-    transition-duration: 1s;
 }
 .header-btn:hover{
     background-color: #000000;
@@ -82,15 +80,9 @@ hr{
     align-items: center;
     justify-content: center;
     background-color: #000000;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
 }
 .comon-btn, .focus-btn{
     text-decoration: none;
-    /* width: 250px;
-    height: 60px; */
     padding: 15px 25px;
     background-color: #ffffff;
     font-size: 20px;
@@ -114,7 +106,6 @@ hr{
     grid-column-gap: 20px;
     grid-row-gap: 20px;
     margin-left: 24px;
-
 }
 .blog{
     border: 1px solid #E8E8E8;
@@ -158,6 +149,20 @@ hr{
 .blog-duration i span, .blog-comment i span{
     margin-left: 10px;
 }
+.tab-btn{
+    width: 131px;
+    height: 47px;
+    display: flex;
+    align-items: center;
+}
+.tab-btn a{
+    display: none;
+    padding: 12px 30px;
+    background-color: #DD0000;
+    border-radius: 5px;
+    color: #fff;
+    text-decoration: none;
+}
 /* Footer styles */
 footer{
     margin-top: 100px;
@@ -186,4 +191,144 @@ footer{
     color: #B9B9B9;
     font-size: 16px;
     font-weight: 500;
+}
+
+/* media query */
+/* mobile device */
+@media screen and (max-width: 688px) {
+    .container{
+        width: 100%;
+        margin-top: 20px;
+    }
+    .main-headers{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .header-left{
+        padding:0 40px 50px 40px;
+    
+    }
+    .header-title{
+        font-size: 50px;
+        font-weight: 500;
+    }
+    .header-paragraph{
+        margin-bottom: 35px;
+    }
+    .header-btn{
+        margin-left: 90px;
+        
+    }
+    .header-right{
+        padding: 0 0;
+        
+    }
+    .header-right img{
+        width: 90%;
+    }
+
+    .main-blogs{
+        display: flex;  
+        flex-direction: column;
+    } 
+    .blogs-link{
+        background-color: #ffffff;
+        height: 250px;
+        width: 100%;
+    }
+    .comon-btn, .focus-btn{
+        border: 1px solid #E8E8E8;   
+    }
+    .blogs{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr); 
+        grid-column-gap: 20px; 
+    }
+    .blog{
+        margin-left: -25px;
+    }
+    footer{
+        margin-top: 20px;
+        text-align: center;
+        border: 1px solid;
+        background-color: #000000;
+    }
+    .footer-title{    
+        margin-top: 30px;
+        color: #ffffff;
+    }
+    hr{
+        margin-top: -15px;
+    }
+    .footer-link ul{
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        margin-top: -30px;
+    }
+    .footer-link ul li{
+        margin-top: 25px;
+        text-align: center;
+    }
+}
+/* tablet device */
+@media screen and (min-width: 689px) and (max-width: 992px) {
+    .container{
+        width: 100%;
+        margin-top: 30px;
+    }
+    .header-title{
+        font-size: 40px;
+        font-weight: 700;
+    }
+    .paragraph{
+        width: 300px;
+        height: 70px;
+        overflow: hidden;
+    }
+    .header-paragraph{
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .main-blogs{
+        display: flex;  
+        flex-direction: column;
+    } 
+    .blogs-link{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-column-gap: 20px;
+        width: 100%;
+        height: 90px;
+        background-color: #fff;
+    }
+    .comon-btn, .focus-btn{
+        border: 1px solid #E8E8E8;   
+    }
+    .blogs{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 10px;
+    }
+    #hidden{
+        display: none;
+    }
+    .tab-btn{
+        margin-left: 355px;
+        margin-top: 50px;
+        margin-bottom: -50px;
+    }
+    .tab-btn a{
+        display: block; 
+    }
+    .footer-link ul{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        margin-top: -30px;
+    }
+    .footer-link ul li{
+        margin-top: 25px;
+        text-align: center;
+    }
+    
 }
